# shar3

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
public/: icon.icns  icon.psd  ssh-key  ssh-key.pub
shared/enums/: events.ts  index.ts  loader.ts  localStorage.ts  updater.ts
shared/interfaces/: context-menu.ts  history.ts  index.ts  payloads.ts  settings.ts
shared/types/: locale.ts
src/: App.css  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  server.rs  tunnel.rs  useless.txt  utils.rs
src-tauri/src/server/: html.rs  serving.rs  utils.rs
src-tauri/src/server/serving/: directory.rs  file.rs  html.rs  image.rs  svg.rs
src/components/Button/: index.tsx
src/components/ContextMenu/: index.tsx
src/components/Dropzone/: index.tsx
src/components/Dropzone/Placeholder/: index.tsx
src/components/Dropzone/Shared/: index.tsx
src/components/HistoryList/: index.tsx
src/components/HistoryList/HistoryRow/: index.tsx
src/components/HistoryTable/: index.tsx
src/components/Joyride/: index.tsx  steps.tsx
src/components/Joyride/JoyrideTooltip/: index.tsx
src/components/Kbd/: index.tsx
src/components/Link/: index.tsx
src/components/Loader/: index.tsx  loader.css
src/components/Loader/ReloadWarning/: index.tsx
src/components/Modal/: index.tsx
src/components/Nav/: index.tsx
src/components/Nav/NavItem/: index.tsx
src/components/Nav/NetworkSwitch/: index.tsx
src/components/Settings/: index.tsx
src/components/Settings/Checkbox/: index.tsx
src/components/Settings/LanguageSelector/: index.tsx
src/components/Settings/TextInput/: index.tsx
src/components/Share/: index.tsx
src/components/Share/Dropzone/: index.tsx
src/components/Share/Placeholder/: index.tsx
src/components/Share/Shared/: index.tsx
src/components/Share/StopShare/: index.tsx
src/components/Splashscreen/: index.tsx
src/components/ThemeProvider/: index.tsx
src/components/Tooltip/: index.tsx
src/components/icons/: Copy.tsx  Cross.tsx  Donate.tsx  Download.tsx  Email.tsx  File.tsx  Folder.tsx  Info.tsx  Mail.tsx  Settings.tsx  Spin.tsx  Stop.tsx  Telegram.tsx  Tick.tsx  Upload.tsx  Whatsapp.tsx  index.ts
src/hooks/: index.ts  useClickAway.ts  useConnection.ts  useCustomEvent.ts  useDebounce.ts  useDisableContextMenu.ts  useLocalStorage.ts  useOsType.ts  useRerenderer.ts  useTheme.ts  useTimeout.ts
src/i18n/: de.json  en.json  es.json  fr.json
src/icons/: Bug.tsx  Command.tsx  Cross.tsx  Email.tsx  File.tsx  Folder.tsx  Moon.tsx  Plus.tsx  Settings.tsx  Spin.tsx  Stop.tsx  Sun.tsx  Telegram.tsx  Tick.tsx  Upload.tsx  index.ts
src/icons/Bug/: Bug.tsx
src/icons/Command/: Command.tsx
src/icons/Settings/: Settings.tsx
src/stores/: settings.ts
src/utils/: base64.ts  copyImage.ts  copyText.ts  errors.ts  file.ts  getSettings.ts  index.ts  logger.ts  mailto.ts  os.ts  relativeTime.ts  scroll.ts  shortenUrl.ts  trackError.ts  updater.ts
