[package]
name = "Shar3"
version = "0.1.0"
description = "A Tauri App"
authors = ["davru (David Sanchez)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-set-focus", "os-all", "dialog-message", "dialog-open", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dufs = "0.42.0"
warp = "0.3.7"
tokio = "1.40.0"
chrono = "0.4.38"
lazy_static = "1.5.0"
base64 = "0.22.1"
cmd_lib = "1.9.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
get_if_addrs = "0.5.3"
percent-encoding = "2.3.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
