[package]
name = "Shar3"
version = "0.1.0"
description = "A Tauri App"
authors = ["davru (David Sanchez)"]
edition = "2021"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
warp = "0.3.7"
tokio = "1.40.0"
chrono = "0.4.38"
base64 = "0.22.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
get_if_addrs = "0.5.3"
percent-encoding = "2.3.1"
tokio-util = "0.7.12"
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-os = "2.0.0"
tauri-plugin-http = "2.0.0"
arboard = "3.4.1"
image = "0.25.2"
tauri-plugin-aptabase = { git = "https://github.com/aptabase/tauri-plugin-aptabase", branch = "v2" }
bore-cli = "0.5.1"
anyhow = "1.0.89"
once_cell = "1.20.1"
tauri-plugin-store = "2.0.0"
tauri-plugin-nosleep = "=2.0.0-beta.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
